--- a/SecondaryWindow.xaml
+++ b/SecondaryWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="TwoWindowsMVVM.ViewModels.SecondaryWindow"
+﻿<Window x:Class="TwoWindowsMVVM.SecondaryWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -7,7 +7,27 @@
         mc:Ignorable="d"
         Title="{Binding Title}" 
         Height="450" Width="800">
+    <Window.Resources>
+        <Style TargetType="Button" >
+            <Setter Property="Margin" Value="10.5"/>
+        </Style>
+    </Window.Resources>
     <Grid>
-        
+        <DockPanel Margin="50">
+            <GroupBox DockPanel.Dock="Top" Header="Сообщение второму окну">
+                <TextBox/>
+            </GroupBox>
+            <UniformGrid DockPanel.Dock="Top" Rows="1">
+                <Button Content="Отправить"/>
+                <Button Content="Открыть второе оно"/>
+                <Button Content="Перейти во второе окно"/>
+            </UniformGrid>
+            <GroupBox>
+                <ListBox>
+
+                </ListBox>
+            </GroupBox>
+        </DockPanel>
+
     </Grid>
 </Window>
