--- a/SecondaryWindow.xaml
+++ b/SecondaryWindow.xaml
@@ -1,10 +1,11 @@
 ﻿<Window x:Class="TwoWindowsMVVM.SecondaryWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:TwoWindowsMVVM.ViewModels"
+        xmlns:vm="clr-namespace:TwoWindowsMVVM.ViewModels"
         mc:Ignorable="d"
+        d:DataContext="{d:DesignInstance Type={x:Type vm:SecondaryWindowViewModel}}"
         Title="{Binding Title}" 
         Height="450" Width="800">
     <Window.Resources>
@@ -15,16 +16,28 @@
     <Grid>
         <DockPanel Margin="50">
             <GroupBox DockPanel.Dock="Top" Header="Сообщение второму окну">
-                <TextBox/>
+                <TextBox Text="{Binding Message}"/>
             </GroupBox>
             <UniformGrid DockPanel.Dock="Top" Rows="1">
-                <Button Content="Отправить"/>
-                <Button Content="Открыть второе оно"/>
-                <Button Content="Перейти во второе окно"/>
+                <Button Content="Отправить" Command="{Binding SendMessageCommand}" CommandParameter="{Binding Message}"/>
+                <Button Content="Открыть второе оно" Command="{Binding OpenMainWindowCommand}"/>
+                <Button Content="Перейти во второе окно" Command="{Binding ChangeToMainWindowCommand}"/>
             </UniformGrid>
             <GroupBox>
-                <ListBox>
-
+                <ListBox ItemsSource="{Binding Messages}">
+                    <ListBox.ItemTemplate>
+                        <DataTemplate>
+                            <Grid>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="auto" SharedSizeGroup="MessageTimeColumn"/>
+                                    <ColumnDefinition Width="3"/>
+                                    <ColumnDefinition/>
+                                </Grid.ColumnDefinitions>
+                                <TextBlock Text="{Binding Time, StringFormat=HH:mm:ss.f, Mode=OneTime}"/>
+                                <TextBlock  Grid.Column="2" Text="{Binding Text, Mode=OneTime}"/>
+                            </Grid>
+                        </DataTemplate>
+                    </ListBox.ItemTemplate>
                 </ListBox>
             </GroupBox>
         </DockPanel>
