--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -16,7 +16,7 @@
     <Grid>
         <DockPanel Margin="50">
             <GroupBox DockPanel.Dock="Top" Header="Сообщение второму окну">
-                <TextBox Text="{Binding Message}"/>
+                <TextBox Text="{Binding Message, UpdateSourceTrigger=PropertyChanged}"/>
             </GroupBox>
             <UniformGrid DockPanel.Dock="Top" Rows="1">
                 <Button Content="Отправить" Command="{Binding SendMessageCommand}" CommandParameter="{Binding Message}"/>
